--- a/fastapi-htmx-tailwind/pyproject.toml
+++ b/fastapi-htmx-tailwind/pyproject.toml
@@ -7,12 +7,13 @@ dependencies = [
     "uvicorn[standard]>=0.30.6",
     "jinja2>=3.1.4",
     "python-multipart>=0.0.9",
+    "typer[all]>=0.12.5",
 ]
 readme = "README.md"
 requires-python = ">= 3.10"
 
 [project.scripts]
-"run-app" = "my_project.__main__:main"
+"run-app" = "my_project.__main__:typer_app"
 
 [build-system]
 requires = ["hatchling"]
