--- a/cpp/.vscode/extensions.json
+++ b/cpp/.vscode/extensions.json
@@ -1,7 +1,7 @@
 {
     "recommendations": [
         "oderwat.indent-rainbow",
-        "usernamehw.errorlens"
+        "usernamehw.errorlens",
         "mkhl.direnv"
     ]
 }
